[gd_scene load_steps=8 format=3 uid="uid://nri4wfs1ovn0"]

[ext_resource type="Theme" uid="uid://loej2f8ojc2n" path="res://Resources/Themes/TapTarTheme.tres" id="1_gjac8"]
[ext_resource type="Script" path="res://Scripts/CharacterCustomization.gd" id="1_x2vtk"]
[ext_resource type="Texture2D" uid="uid://dyb4bavnc75gd" path="res://Resources/Images/oldpaper.png" id="2_os6na"]
[ext_resource type="Texture2D" uid="uid://dkm2wjhh2nqtg" path="res://Resources/Sprites/border1.png" id="4_uesn8"]
[ext_resource type="Theme" uid="uid://4bpbj15i2idx" path="res://Resources/Themes/spinboxTheme.tres" id="5_4veot"]
[ext_resource type="Texture2D" uid="uid://ca2ndd3qxgssi" path="res://Resources/Sprites/arrow.png" id="6_cyccr"]
[ext_resource type="Texture2D" uid="uid://cn2tav06exfrx" path="res://Resources/Sprites/arrow_back.png" id="7_ssu1v"]

[node name="Customization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2vtk")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_os6na")

[node name="Border" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0109375
anchor_top = 0.380556
anchor_right = 0.317708
anchor_bottom = 0.893519
texture = ExtResource("4_uesn8")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Border2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.365625
anchor_top = 0.380556
anchor_right = 0.672396
anchor_bottom = 0.893519
texture = ExtResource("4_uesn8")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CustomizationTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0286458
anchor_top = 0.0540123
anchor_right = 0.253125
anchor_bottom = 0.141049
offset_right = -29.3337
offset_bottom = -0.666718
theme = ExtResource("1_gjac8")
text = "Character Customization"
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0286458
anchor_top = 0.24537
anchor_right = 0.118924
anchor_bottom = 0.332407
offset_bottom = -15.6665
theme = ExtResource("1_gjac8")
text = "Name:"
metadata/_edit_use_anchors_ = true

[node name="NameLabel2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.69375
anchor_top = 0.532407
anchor_right = 0.777083
anchor_bottom = 0.619444
theme = ExtResource("1_gjac8")
text = "Map size"
metadata/_edit_use_anchors_ = true

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0286458
anchor_top = 0.408333
anchor_right = 0.103958
anchor_bottom = 0.49537
theme = ExtResource("1_gjac8")
text = "Stats"
metadata/_edit_use_anchors_ = true

[node name="CombatLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0286458
anchor_top = 0.537037
anchor_right = 0.0972222
anchor_bottom = 0.624074
offset_bottom = -16.6661
theme = ExtResource("1_gjac8")
text = "Martial prowess"
metadata/_edit_use_anchors_ = true

[node name="HackingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0286458
anchor_top = 0.7
anchor_right = 0.116971
anchor_bottom = 0.787037
theme = ExtResource("1_gjac8")
text = "Intellect"
metadata/_edit_use_anchors_ = true

[node name="PointsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.190625
anchor_top = 0.893519
anchor_right = 0.282113
anchor_bottom = 0.980556
theme = ExtResource("1_gjac8")
text = "Points:"
metadata/_edit_use_anchors_ = true

[node name="Points" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.282113
anchor_top = 0.893519
anchor_right = 0.317467
anchor_bottom = 0.980556
theme = ExtResource("1_gjac8")
text = "0"
metadata/_edit_use_anchors_ = true

[node name="LockpickingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0286458
anchor_top = 0.77577
anchor_right = 0.160613
anchor_bottom = 0.862807
theme = ExtResource("1_gjac8")
text = "Cunning"
metadata/_edit_use_anchors_ = true

[node name="VitalityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0287875
anchor_top = 0.612792
anchor_right = 0.117112
anchor_bottom = 0.69983
offset_bottom = -20.624
theme = ExtResource("1_gjac8")
text = "Charisma"
metadata/_edit_use_anchors_ = true

[node name="MartialProwessSkillInput" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.190625
anchor_top = 0.537037
anchor_right = 0.294725
anchor_bottom = 0.612807
theme = ExtResource("5_4veot")
metadata/_edit_use_anchors_ = true

[node name="IntellectSkillInput" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.190842
anchor_top = 0.7
anchor_right = 0.294942
anchor_bottom = 0.77577
theme = ExtResource("5_4veot")
metadata/_edit_use_anchors_ = true

[node name="CunningSkillInput" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.190842
anchor_top = 0.77577
anchor_right = 0.294942
anchor_bottom = 0.851141
theme = ExtResource("5_4veot")
metadata/_edit_use_anchors_ = true

[node name="CharismaSkillInput" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.190625
anchor_top = 0.612807
anchor_right = 0.294725
anchor_bottom = 0.688178
theme = ExtResource("5_4veot")
metadata/_edit_use_anchors_ = true

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.118954
anchor_top = 0.245222
anchor_right = 0.671004
anchor_bottom = 0.327096
tooltip_text = "Charcater name goes here"
theme = ExtResource("1_gjac8")
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.838542
anchor_top = 0.893519
anchor_right = 0.978299
anchor_bottom = 0.987654
theme = ExtResource("1_gjac8")
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673611
anchor_top = 0.893519
anchor_right = 0.813368
anchor_bottom = 0.987654
theme = ExtResource("1_gjac8")
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.416667
anchor_top = 0.408333
anchor_right = 0.617708
anchor_bottom = 0.765741
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.572917
anchor_top = 0.775926
anchor_right = 0.619271
anchor_bottom = 0.837963
icon = ExtResource("6_cyccr")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="PreviousButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416667
anchor_top = 0.775926
anchor_right = 0.463021
anchor_bottom = 0.837963
icon = ExtResource("7_ssu1v")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="MapSelect" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.791667
anchor_top = 0.537037
anchor_right = 0.901563
anchor_bottom = 0.624074
metadata/_edit_use_anchors_ = true

[connection signal="value_changed" from="MartialProwessSkillInput" to="." method="_on_martial_prowess_skill_input_value_changed"]
[connection signal="value_changed" from="IntellectSkillInput" to="." method="_on_intellect_skill_input_value_changed"]
[connection signal="value_changed" from="CunningSkillInput" to="." method="_on_cunning_skill_input_value_changed"]
[connection signal="value_changed" from="CharismaSkillInput" to="." method="_on_charisma_skill_input_value_changed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="item_selected" from="MapSelect" to="." method="_on_map_select_item_selected"]
